Added the paddles and ball movement

--- a/index.html
+++ b/index.html
@@ -24,23 +24,82 @@
 		var canvas = document.getElementById('myCanvas');
 		var ctx = canvas.getContext('2d');
 
+		var paddleHeight = 10;
+		var paddleWidth = 75;
+		var paddleX = ( canvas.width - paddleWidth ) / 2;
+
+		var rightPressed = false;
+		var leftPressed = false;
+
 		var x = canvas.width / 2;
 		var y = canvas.height /2;
-		var t = 1;
+		var dx = 1;
+		var dy = 1;
+		var ballRadius = 10;
+
+		function drawPaddle() {
+			ctx.beginPath();
+			ctx.rect( paddleX, canvas.height - paddleHeight, paddleWidth, paddleHeight );
+			ctx.fillStyle = '#0095DD';
+			ctx.fill();
+			ctx.closePath();
+		}
 
 		function drawBall() {
 			ctx.beginPath();
-			ctx.arc(x, y, 20, 0, Math.PI*2);
+			ctx.arc(x, y, ballRadius, 0, Math.PI*2);
 			ctx.fillStyle = "blue";
 			ctx.fill();
 			ctx.closePath();
 		}
 
+		document.addEventListener('keydown', keyDownHandler, false);
+		document.addEventListener('keyup', keyUpHandler, false);
+
+		function keyDownHandler ( e ) {
+			if(e.keyCode == 39) {
+				rightPressed = true;
+			}
+			else if(e.keyCode == 37) {
+				leftPressed = true;
+			}
+		}
+
+		function keyUpHandler (e) {
+			if (e.keyCode == 39) {
+				rightPressed = false;
+			}
+			else if (e.keyCode == 37) {
+				leftPressed = false;
+			}
+		}
+
 		function draw() {
 			ctx.clearRect(0, 0, canvas.width, canvas.height);
 			drawBall();
-			x+=t;
-			y+=t;
+			drawPaddle();
+			if((x+dx) > canvas.width - ballRadius) {
+				dx = -dx;
+			}
+			else if((x+dx) < ballRadius) {
+				dx = -dx;
+			}
+			x += dx;
+			if((y+dy) > canvas.height - ballRadius) {
+				dy = -dy;
+			}
+			else if ((y + dy) < 0 - ballRadius) {
+				dy = -dy;
+			}
+			y += dy;
+
+
+			if (rightPressed && paddleX < canvas.width-paddleWidth) {
+				paddleX += 7;
+			}
+			else if(leftPressed && paddleX > 0) {
+				paddleX -= 7;
+			}
 		}
 		setInterval(draw, 10);
 
